Add remaining project files

--- a/.env.backup
+++ b/.env.backup
@@ -1,6 +1,6 @@
 # Jira Configuration
-JIRA_URL=https://example.atlassian.net
-JIRA_USERNAME=test@example.com
+JIRA_URL=https://satish1373.atlassian.net/
+JIRA_USERNAME=satish1373@outlook.com
 JIRA_TOKEN=test-token
 JIRA_WEBHOOK_SECRET=test-secret
 # Jira Configuration
